# mnist_kmeans_test

./: README.md  pyproject.toml
notebooks/: 01-getting-to-know-the-data.ipynb  02-preprocessing-the-data.ipynb  03-building-the-model.ipynb  04-optimizing-the-algorithm.ipynb  05-visualization-of-cluster-centroids.ipynb  10-initial-improvements.ipynb  11-pca-before-fit.ipynb
src/classy/: kmeans.py
